// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot test for eCR Document Evaluate Clinical Info Should return Plan of Treatment when only ordered meds 1`] = `
<div>
  <div>
    <div
      class="grid-row flex-column"
    >
      <div
        class="data-title padding-right-1"
      >
        Plan of Treatment
      </div>
      <div
        class="grid-col width-full text-pre-line p-list"
      >
        <table
          class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
          data-testid="table"
        >
          <caption>
            Planned Medications & Immunizations
          </caption>
          <thead>
            <tr>
              <th
                class="table-header"
                scope="col"
              >
                Name
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Ordered On
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Dosage
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-top text-pre-line"
              >
                aspirin tablet 325 mg
              </td>
              <td
                class="text-top text-pre-line"
              >
                11/08/2020
              </td>
              <td
                class="text-top text-pre-line"
              >
                1 pill
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="section__line_gray"
    />
  </div>
</div>
`;

exports[`Snapshot test for eCR Document Evaluate Clinical Info Should return Plan of Treatment when only pending results 1`] = `
<div>
  <div>
    <div
      class="grid-row flex-column"
    >
      <div
        class="data-title padding-right-1"
      >
        Plan of Treatment
      </div>
      <div
        class="grid-col width-full text-pre-line p-list"
      >
        <table
          class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
          data-testid="table"
        >
          <caption>
            Planned Procedures & Orders
          </caption>
          <thead>
            <tr>
              <th
                class="table-header"
                scope="col"
              >
                Name
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Scheduled Time
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Ordered On
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-top text-pre-line"
              >
                Zika virus envelope (E) gene [Presence] in Serum by Probe and target amplification method
              </td>
              <td
                class="text-top text-pre-line"
              >
                11/08/2020
              </td>
              <td
                class="text-top text-pre-line"
              >
                <span
                  class="text-italic text-base"
                >
                  No data
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="section__line_gray"
    />
  </div>
</div>
`;

exports[`Snapshot test for eCR Document Evaluate Clinical Info Should return Plan of Treatment when only scheduled appointments 1`] = `
<div>
  <div>
    <div
      class="grid-row flex-column"
    >
      <div
        class="data-title padding-right-1"
      >
        Plan of Treatment
      </div>
      <div
        class="grid-col width-full text-pre-line p-list"
      >
        <table
          class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
          data-testid="table"
        >
          <caption>
            Planned Activities & Appointments
          </caption>
          <thead>
            <tr>
              <th
                class="table-header"
                scope="col"
              >
                Name
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Scheduled Time
              </th>
              <th
                class="table-header"
                scope="col"
              >
                Type
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-top text-pre-line"
              >
                A dr's appointment
              </td>
              <td
                class="text-top text-pre-line"
              >
                01/01/2020
              </td>
              <td
                class="text-top text-pre-line"
              >
                Appointment
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="section__line_gray"
    />
  </div>
</div>
`;

exports[`Snapshot test for eCR Document Given no data, info message for empty sections should appear 1`] = `
<div>
  <div
    class="margin-top-10"
  >
    <div
      class="grid-container padding-0 margin-bottom-3 maxw-none"
      data-testid="gridContainer"
    >
      <div
        class="grid-row margin-bottom-05"
        data-testid="grid"
      >
        <div
          class=""
          data-testid="grid"
        >
          <h2
            class="margin-bottom-0"
            id="ecr-document"
          >
            eCR Document
          </h2>
        </div>
        <div
          class="flex-align-self-center margin-left-auto"
          data-testid="grid"
        >
          <button
            class="usa-button usa-button--unstyled"
            data-testid="button"
            type="button"
          >
            Expand all 
            sections
          </button>
          <span
            class="vertical-line"
          />
          <button
            class="usa-button usa-button--unstyled"
            data-testid="button"
            type="button"
          >
            Collapse all 
            sections
          </button>
        </div>
      </div>
      <div
        class="text-base-darker line-height-sans-5"
      >
        Displays entire eICR and RR documents to help you dig further into eCR data
      </div>
    </div>
    <div
      class="usa-accordion accordion-primary accordion-ecr-section"
      data-allow-multiple="true"
      data-testid="accordion"
    >
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="patient-info_1"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_patient-info_1"
          type="button"
        >
          <span
            id="patient-info"
          >
            Patient Info
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_patient-info_1"
        id="patient-info_1"
      >
        <p
          class="text-italic padding-bottom-05"
        >
          No patient information was found in this eCR.
        </p>
      </div>
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="encounter-info_2"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_encounter-info_2"
          type="button"
        >
          <span
            id="encounter-info"
          >
            Encounter Info
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_encounter-info_2"
        id="encounter-info_2"
      >
        <p
          class="text-italic padding-bottom-05"
        >
          No encounter information was found in this eCR.
        </p>
      </div>
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clinical-info_3"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_clinical-info_3"
          type="button"
        >
          <span
            id="clinical-info"
          >
            Clinical Info
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clinical-info_3"
        id="clinical-info_3"
      >
        <p
          class="text-italic padding-bottom-05"
        >
          No clinical information was found in this eCR.
        </p>
      </div>
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="lab-info_4"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_lab-info_4"
          type="button"
        >
          <span
            id="lab-info"
          >
            Lab Info
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_lab-info_4"
        id="lab-info_4"
      >
        <p
          class="text-italic padding-bottom-05"
        >
          No lab information was found in this eCR.
        </p>
      </div>
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="ecr-metadata_5"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_ecr-metadata_5"
          type="button"
        >
          <span
            id="ecr-metadata"
          >
            eCR Metadata
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_ecr-metadata_5"
        id="ecr-metadata_5"
      >
        <p
          class="text-italic padding-bottom-05"
        >
          No eCR metadata was found in this eCR.
        </p>
      </div>
      <h3
        class="usa-accordion__heading"
      >
        <button
          aria-controls="unavailable-info_6"
          aria-expanded="true"
          class="usa-accordion__button"
          data-testid="accordionButton_unavailable-info_6"
          type="button"
        >
          <span
            id="unavailable-info"
          >
            Unavailable Info
          </span>
        </button>
      </h3>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_unavailable-info_6"
        id="unavailable-info_6"
      >
        <div>
          <div
            class="margin-top-0"
          >
            <div
              class="padding-bottom-3"
            >
              <div
                class="usa-summary-box__body"
              >
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-demographics"
                  >
                    Demographics
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Patient Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          DOB
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Age at Encounter
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Vital Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Date of Death
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Sex
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Race
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Ethnicity
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Tribal Affiliation
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Preferred Language
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Patient Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Recent County
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Parent/Guardian
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Emergency Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          <div
                            class="display-flex flex-align-baseline"
                          >
                            Patient IDs
                            <span
                              class="usa-tooltip"
                              data-testid="tooltipWrapper"
                            >
                              <div
                                aria-describedby="tooltip-r:id"
                                class="usa-tooltip__trigger margin-left-05 usa-tooltip"
                                data-testid="triggerElement"
                                tabindex="0"
                                title=""
                              >
                                <svg
                                  aria-label="description"
                                  class="usa-icon tooltip-icon text-secondary flex-align-center"
                                  focusable="false"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h24v24H0V0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                                  />
                                </svg>
                              </div>
                              <span
                                aria-hidden="true"
                                class="usa-tooltip__body"
                                data-testid="tooltipBody"
                                id="tooltip-r:id"
                                role="tooltip"
                                title="Unique patient identifier(s) from their medical record. For example, a patient's social security number or medical record number."
                              >
                                Unique patient identifier(s) from their medical record. For example, a patient's social security number or medical record number.
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-social-history"
                  >
                    Social History
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Exposure Contacts
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Tobacco Use
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Travel History
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Homeless Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Alcohol Use
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Sexual Orientation
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Occupation
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Occupation History
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Religious Affiliation
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Marital Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Nationality
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Country of Residence
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Disability Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-pregnancy-info"
                  >
                    Pregnancy Info
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Pregnancy Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Postpartum Status
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          <div
                            class="display-flex flex-align-baseline"
                          >
                            Last Menstrual Period
                            <span
                              class="usa-tooltip"
                              data-testid="tooltipWrapper"
                            >
                              <div
                                aria-describedby="tooltip-r:id"
                                class="usa-tooltip__trigger margin-left-05 usa-tooltip"
                                data-testid="triggerElement"
                                tabindex="0"
                                title=""
                              >
                                <svg
                                  aria-label="description"
                                  class="usa-icon tooltip-icon text-secondary flex-align-center"
                                  focusable="false"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h24v24H0V0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                                  />
                                </svg>
                              </div>
                              <span
                                aria-hidden="true"
                                class="usa-tooltip__body"
                                data-testid="tooltipBody"
                                id="tooltip-r:id"
                                role="tooltip"
                                title="Last Menstrual Period represents the first day of the last menstrual period of the patient. This section lists multiple periods in collected in chronological order."
                              >
                                Last Menstrual Period represents the first day of the last menstrual period of the patient. This section lists multiple periods in collected in chronological order.
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-encounter-details"
                  >
                    Encounter Details
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Encounter Date/Time
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Encounter Type
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Encounter ID
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Encounter Diagnosis
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Encounter Care Team
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-hospital-encounter-details"
                  >
                    Hospital Encounter Details
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Hospital Admission Diagnosis
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Hospital Discharge Diagnosis
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-facility-details"
                  >
                    Facility Details
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility Contact Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility Type
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Facility ID
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-clinical-notes"
                  >
                    Clinical Notes
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          <div
                            class="display-flex flex-align-baseline"
                          >
                            Miscellaneous Notes
                            <span
                              class="usa-tooltip"
                              data-testid="tooltipWrapper"
                            >
                              <div
                                aria-describedby="tooltip-r:id"
                                class="usa-tooltip__trigger margin-left-05 usa-tooltip"
                                data-testid="triggerElement"
                                tabindex="0"
                                title=""
                              >
                                <svg
                                  aria-label="description"
                                  class="usa-icon tooltip-icon text-secondary flex-align-center"
                                  focusable="false"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h24v24H0V0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                                  />
                                </svg>
                              </div>
                              <span
                                aria-hidden="true"
                                class="usa-tooltip__body"
                                data-testid="tooltipBody"
                                id="tooltip-r:id"
                                role="tooltip"
                                title="Clinical notes from various parts of a medical record. Type of note found here depends on how the provider's EHR system onboarded to send eCR."
                              >
                                Clinical notes from various parts of a medical record. Type of note found here depends on how the provider's EHR system onboarded to send eCR.
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-provider-details"
                  >
                    Provider Details
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider Facility Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider Facility Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Provider ID
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-symptoms-and-problems"
                  >
                    Symptoms and Problems
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Reason for Visit
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Problems List
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-diagnostics-and-vital-signs"
                  >
                    Diagnostics and  Vital Signs
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Vital Signs
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-immunizations"
                  >
                    Immunizations
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Immunization History
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-treatment-details"
                  >
                    Treatment Details
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Procedures
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Plan of Treatment
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Administered Medications
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Care Team
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-ecr-metadata"
                  >
                    eCR Metadata
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          <div
                            class="display-flex flex-align-baseline"
                          >
                            eICR ID
                            <span
                              class="usa-tooltip"
                              data-testid="tooltipWrapper"
                            >
                              <div
                                aria-describedby="tooltip-r:id"
                                class="usa-tooltip__trigger margin-left-05 usa-tooltip"
                                data-testid="triggerElement"
                                tabindex="0"
                                title=""
                              >
                                <svg
                                  aria-label="description"
                                  class="usa-icon tooltip-icon text-secondary flex-align-center"
                                  focusable="false"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h24v24H0V0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                                  />
                                </svg>
                              </div>
                              <span
                                aria-hidden="true"
                                class="usa-tooltip__body"
                                data-testid="tooltipBody"
                                id="tooltip-r:id"
                                role="tooltip"
                                title="Unique document ID for the eICR that originates from the medical record. Different from the Document ID that NBS creates for all incoming records."
                              >
                                Unique document ID for the eICR that originates from the medical record. Different from the Document ID that NBS creates for all incoming records.
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Date/Time eCR Created
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          eICR Release Version
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          EHR Manufacturer Model Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          EHR Software Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          eICR Processing Info
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Custodian ID
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Custodian Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Custodian Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Custodian Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="gutter-3"
                >
                  <h4
                    class="usa-summary-box__heading padding-y-105"
                    id="unavailable-eicr-author-details-for-practitioner"
                  >
                    eICR Author Details for Practitioner
                  </h4>
                  <div
                    class="usa-summary-box__text"
                  >
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Facility Name
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Facility Address
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                    <div>
                      <div
                        class="grid-row"
                      >
                        <div
                          class="data-title padding-right-1"
                        >
                          Author Facility Contact
                        </div>
                        <div
                          class="grid-col maxw7 text-pre-line p-list text-italic text-base"
                        >
                          No data
                        </div>
                      </div>
                      <div
                        class="section__line_gray"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
